package com.laozhu.f3krule;

public interface Task {
}
