package com.laozhu.f3krule;

public class TaskActionLastFlight implements TaskAction{
}
