package com.laozhu.f3krule;

public class TaskActionLastTwo implements TaskAction{
}
