package com.laozhu.f3krule;

public class TaskLastFlight implements Task{
}
