package com.laozhu.f3krule;


public class TaskLastTwo implements Task {
}
